<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:hunt="http://schemas.android.com/apk/res-auto" >
    
    <item 
        android:id="@+id/action_play_services"
        android:title="@string/play_services"
        hunt:showAsAction="ifRoom"
        android:icon="@drawable/games_controller_white"/>
    
    <item 
        android:id="@+id/action_show_scoreboard"
        android:title="@string/show_scoreboard"
        hunt:showAsAction="ifRoom"
        android:icon="@drawable/scoreboard_action"/>

    <item
        hunt:showAsAction="ifRoom|withText"
        android:id="@+id/action_terraform"
        android:title="@string/terraform"/>
    
    <item
        hunt:showAsAction="ifRoom"
        android:id="@+id/action_help"
        android:icon="@drawable/ic_action_help"
        android:title="@string/help"/>

</menu>
