<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/demonstrating_text"
        style="@style/TutorialText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/demonstrating" />

    <TextView
        android:id="@+id/tutorial_text"
        style="@style/TutorialText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="8dp"
        android:text="@string/welcome" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        style="@style/TutorialText"
        android:id="@+id/descriptionAndBtnContainer" >

        <TextView
            android:id="@+id/tutorial_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:maxWidth="300dp"
            android:textSize="@dimen/tutorialTextSize">
        </TextView>

        <Button
            android:id="@+id/tutorial_replay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/tutorial_replay" />
    </LinearLayout>

</RelativeLayout>