<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="8dp" >
    
    <LinearLayout 
        style="@style/TutorialText"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">
        
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tutorial_scale"
            android:padding="8dp"/>
            

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/tut_completed"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/promote_join_ranklist_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ellipsize="none"
                android:maxLines="10"
                android:maxWidth="400dp"
                android:scrollHorizontally="false"
                android:singleLine="false"
                android:text="@string/promote_join_ranklist"
                android:textSize="22sp" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />

            <Button
                android:id="@+id/another_time"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/another_time" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>